# Evijnar-Health

apps/api/: pyproject.toml
apps/api/app/services/data_ingestion/mappers/: hospital_mapper.py  normalizer_mapper.py  procedure_mapper.py
apps/api/app/utils/: llm_client.py
